--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html class=page-home lang=en>
 <meta charset=UTF-8>
+<meta content="A bio of myself (Omniscient) I like to make design websites and play with CSS for fun." name=description>
+<meta content="Omni Omniscient Jiiks Hammock Maple Bluescream BetterDiscord Discord Themes Plugins Theme Plugin Installation How-To" name="keywords">
 <title>Omni Themes</title>
 <link href=https://imgur.com/GZVRLfz.png rel=icon>
 <meta content="width=device-width,initial-scale=1" name=viewport>
