--- a/about.html
+++ b/about.html
@@ -2,8 +2,8 @@
 <meta charset=utf-8>
 <meta content="IE=edge" http-equiv=X-UA-Compatible>
 <meta content="width=device-width,initial-scale=1" name=viewport>
-<meta content="" name=description>
-<meta content=" " name=keywords>
+<meta content="About the Omniscient, the author of multiple Discordapp themes and the one who made BetterDiscord docs." name=description>
+<meta content="Omni Omniscient Jiiks Hammock Maple Bluescream BetterDiscord Discord Themes Plugins Theme Plugin Installation How-To" name="keywords">
 <title>Omni documentation | BetterDiscord Documentation and Tutorials</title>
 <link href=doc_files/syntax.css rel=stylesheet>
 <link href=doc_files/font-awesome.min.css rel=stylesheet>
