--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <hr class=section-title-rule>
             <div class=popular-list>
                 <a href=https://raw.githubusercontent.com/0mniscient/Discord-Themes/master/Themes/Aesthetic%20Discord.theme.css class=theme-unit>
-                    <div class=media><img src=https://a.pomf.cat/vvjkzd.png data-lightbox=themepreview></div>
+                    <div class=media><img src=images/Aesthetic.png data-lightbox=themepreview></div>
                     <div class=desc>KMS🏻</div>
                 </a>
                 <a href=https://raw.githubusercontent.com/0mniscient/Discord-Themes/master/Themes/Discord%20Princess.theme.css class=theme-unit>
