--- a/index.html
+++ b/index.html
@@ -67,15 +67,15 @@
                     <div class=desc>KMS🏻</div>
                 </a>
                 <a href=https://raw.githubusercontent.com/0mniscient/Discord-Themes/master/Themes/Discord%20Princess.theme.css class=theme-unit>
-                    <div class=media><img src=https://a.pomf.cat/qtoppj.png data-lightbox=themepreview></div>
+                    <div class=media><img src=images/Princess.png data-lightbox=themepreview></div>
                     <div class=desc>A theme just for princesses 👸🏻</div>
                 </a>
                 <a href=https://raw.githubusercontent.com/0mniscient/Discord-Themes/master/Themes/Discord%20Reborn.theme.css class=theme-unit>
-                    <div class=media><img src=https://a.pomf.cat/swuofs.jpg data-lightbox=themepreview></div>
+                    <div class=media><img src=images/Reborn.jpg data-lightbox=themepreview></div>
                     <div class=desc>A cold, dark & winter like theme. Darkened Discord's UI a bit and implemented a nice dark background image.</div>
                 </a>
                 <a href=https://raw.githubusercontent.com/0mniscient/Discord-Themes/master/Themes/Discord%20Rebirth.theme.css class=theme-unit>
-                    <div class=media><img src=https://i.imgur.com/lPdrdDe.png data-lightbox=themepreview></div>
+                    <div class=media><img src=images/Rebirth.png data-lightbox=themepreview></div>
                     <div class=desc>A cozy modern dark theme most time ever spent on a theme. 98% of the theme darkened like it should be.</div>
                 </a>
             </div>
@@ -116,10 +116,10 @@
                                 </a>
                                 <li>
                                     <hr>
-                                    <li><a href=https://betterdiscord.net/home/><img src=https://betterdiscord.net/content/img/fav.jpg class=betterdiscord>
+                                    <li><a href=https://betterdiscord.net/home/><img src=images/BD%logo.jpg class=betterdiscord>
                                         <div class=double-line>BetterDiscord<span>Theme/Plugin Loader</span></div>
                                         </a>
-                                    </li><a href=https://discordapp.com/><img src=https://discordapp.com/assets/2c21aeda16de354ba5334551a883b481.png class=discord>
+                                    </li><a href=https://discordapp.com/><img src=images/Discord%logo.png class=discord>
                                     <div class=double-line>Discordapp<span>App for gamers</span></div>
                                     </a>
             </ul>
