--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@
                                 </a>
                                 <li>
                                     <hr>
-                                    <li><a href=https://betterdiscord.net/home/><img src=images/BD%logo.jpg class=betterdiscord>
+                                    <li><a href=https://betterdiscord.net/home/><img src=images/BD%20logo.jpg class=betterdiscord>
                                         <div class=double-line>BetterDiscord<span>Theme/Plugin Loader</span></div>
                                         </a>
-                                    </li><a href=https://discordapp.com/><img src=images/Discord%logo.png class=discord>
+                                    </li><a href=https://discordapp.com/><img src=images/Discord%20logo.png class=discord>
                                     <div class=double-line>Discordapp<span>App for gamers</span></div>
                                     </a>
             </ul>
