--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class=page-home lang=en>
 <meta charset=UTF-8>
-<meta content="A bio of myself (Omniscient) I like to make design websites and play with CSS for fun." name=description>
+<meta content="Themes showcase for Discord and Documentation on BetterDiscord. Share your themes and plugins here." name=description>
 <meta content="Omni Omniscient Jiiks Hammock Maple Bluescream BetterDiscord Discord Themes Plugins Theme Plugin Installation How-To" name="keywords">
 <title>Omni Themes</title>
 <link href=https://imgur.com/GZVRLfz.png rel=icon>
