--- a/install_plugin.html
+++ b/install_plugin.html
@@ -66,7 +66,7 @@
                     <ul class=dropdown-menu>
                         <li><a href=https://github.com/0mniscient/Discord-Themes target=_blank>Github Repo</a>
                             <li><a href=# target=_blank>Support Server</a>
-                                <li><a href=discordapp.com target=_blank>DiscordApp</a>
+                                <li><a href=https://discordapp.com/ target=_blank>DiscordApp</a>
                                     <li><a href=# target=_blank>Link</a></ul>
                     </li>
                     <!--comment out this block if you want to hide search-->
