--- a/contact_thank_you.html
+++ b/contact_thank_you.html
@@ -65,7 +65,7 @@
                         <li><a href=https://github.com/0mniscient/Discord-Themes target=_blank>Github Repo</a>
                             <li><a href=https://discordapp.com/invite/0Tmfo5ZbORCRqbAd target=_blank>Support Server</a>
                                 <li><a href=https://discordapp.com/ target=_blank>DiscordApp</a>
-                                    <li><a href=/contact.html target=_blank>Contact</a></ul>
+                                    <li><a href=https://0mniscient.github.io/contact.html>Contact</a></ul>
                     </li>
                     <!--comment out this block if you want to hide search-->
                     <li>
