--- a/install_plugin.html
+++ b/install_plugin.html
@@ -124,7 +124,7 @@
                                                 <li class=active><a href=#>Installing Plugins</a>
                                                     <li><a href=https://0mniscient.github.io/making_theme.html>Making A Theme</a>
                                                         <li><a href=https://0mniscient.github.io/making_plugin.html>Making A Plugin</a>
-                                                          <ul>
+                                                          <li><a href=#>Downloads</a>
                                                               <li><a href=https://0mniscient.github.io/themes.html>Themes</a>
                                                                   <li><a href=https://0mniscient.github.io/plugins.html>Plugins</a>
                                         <!-- if you aren't using the accordion, uncomment this block:
