--- a/docs.html
+++ b/docs.html
@@ -122,7 +122,7 @@
                                             <li><a href=/install_theme.html>Installing Themes</a>
                                                 <li><a href=/install_plugin.html>Installing Plugins</a>
                                                     <li><a href=/making_theme.html>Making A Theme</a>
-                                                        <li><a href=/making_plugin.html>Making A Plugin</a></ul>
+                                                        <li><a href=/making_plugin.html>Making A Plugin</a>
                                                           <li><a href=#>Downloads</a>
                                                               <ul>
                                                                   <li><a href=https://0mniscient.github.io/themes.html>Themes</a>
