--- a/faq.html
+++ b/faq.html
@@ -120,7 +120,7 @@
                                             <li><a href=https://0mniscient.github.io/install_theme.html>Installing Themes</a>
                                                 <li><a href=https://0mniscient.github.io/install_plugin.html>Installing Plugins</a>
                                                     <li><a href=https://0mniscient.github.io/making_theme.html>Making A Theme</a>
-                                                        <li><a href=https://0mniscient.github.io/making_plugin.html>Making A Plugin</a>
+                                                        <li><a href=https://0mniscient.github.io/making_plugin.html>Making A Plugin</a></ul>
                                                           <li><a href=#>Downloads</a>
                                                             <ul>
                                                                   <li><a href=https://0mniscient.github.io/themes.html>Themes</a>
