--- a/install_plugin.html
+++ b/install_plugin.html
@@ -123,7 +123,7 @@
                                             <li><a href=https://0mniscient.github.io/install_theme.html>Installing Themes</a>
                                                 <li class=active><a href=#>Installing Plugins</a>
                                                     <li><a href=https://0mniscient.github.io/making_theme.html>Making A Theme</a>
-                                                        <li><a href=https://0mniscient.github.io/making_plugin.html>Making A Plugin</a>
+                                                        <li><a href=https://0mniscient.github.io/making_plugin.html>Making A Plugin</a></ul>
                                                           <li><a href=#>Downloads</a>
                                                             <ul>
                                                               <li><a href=https://0mniscient.github.io/themes.html>Themes</a>
