--- a/making_plugin.html
+++ b/making_plugin.html
@@ -140,7 +140,7 @@
         <!-- Content Column -->
         <div class=col-md-9>
             <div class=post-header>
-                <h1 class=post-title-main>Making a theme</h1></div>
+                <h1 class=post-title-main>Making a plugin</h1></div>
             <div class=post-content>
                 <!-- this handles the automatic toc. use ## for subheads to auto-generate the on-page minitoc. if you use html tags, you must supply an ID for the heading element in order for it to appear in the minitoc. -->
                 <script>
