--- a/making_plugin.html
+++ b/making_plugin.html
@@ -236,6 +236,7 @@
                         </div>
                     </div>
                 </div>
+                <div class=tags><b>Tags: </b><a href=https://0mniscient.github.io/install_plugin.html class="btn btn-default cursorNorm navbar-btn" role=button>install_plugin</a> <a href=https://0mniscient.github.io/plugins.html class="btn btn-default cursorNorm navbar-btn" role=button>Plugins</a> <a href=https://0mniscient.github.io/making_plugin.html class="btn btn-default cursorNorm navbar-btn" role=button>making_plugin</a></div>
             </div>
             <hr class=shaded>
             <footer>
