--- a/making_theme.html
+++ b/making_theme.html
@@ -258,6 +258,7 @@
                                                                                                 has what classes.
                                                                                                 <li>
                                                                                                     <p>If you are familiar with CSS you will know using <code>!important</code> is a bad habit so please don't use it unless it is needed.</ul>
+                                                                                                      <div class=tags><b>Tags: </b><a href=https://0mniscient.github.io/install_theme.html class="btn btn-default cursorNorm navbar-btn" role=button>install_theme</a> <a href=https://0mniscient.github.io/theme.html class="btn btn-default cursorNorm navbar-btn" role=button>Themes</a> <a href=https://0mniscient.github.io/making_theme.html class="btn btn-default cursorNorm navbar-btn" role=button>making_theme</a></div>
             </div>
             <hr class=shaded>
             <footer>
