--- a/plugin_api.html
+++ b/plugin_api.html
@@ -185,7 +185,7 @@ BdApi.getUserNameById("id");<br>
 <b><font color=#494949>// BdApi.setStatus("status"); Disabled for now</font></b><br>
 <b><font color=#494949>// Displays a simple alert box, will be moved to BdApi.alert("title", "content") soon</font></b><br>
 Core.prototype.alert("title", "text")</code></pre></div>
-                        <div class=tags><b>Tags: </b><a href=https://0mniscient.github.io/install_plugin.html class="btn btn-default cursorNorm navbar-btn" role=button>install_plugin</a></div>
+                        <div class=tags><b>Tags: </b><a href=https://0mniscient.github.io/install_plugin.html class="btn btn-default cursorNorm navbar-btn" role=button>install_plugin</a> <a href=https://0mniscient.github.io/plugins.html class="btn btn-default cursorNorm navbar-btn" role=button>Plugins</a> <a href=https://0mniscient.github.io/making_plugin.html class="btn btn-default cursorNorm navbar-btn" role=button>making_plugins</a></div>
             </div>
             <hr class=shaded>
             <footer>
