--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
                         <li><a href=https://github.com/0mniscient/Discord-Themes target=_blank>Github Repo</a>
                             <li><a href=https://discordapp.com/invite/0Tmfo5ZbORCRqbAd target=_blank>Support Server</a>
                                 <li><a href=https://discordapp.com/ target=_blank>DiscordApp</a>
-                                    <li><a href=https://0mniscient.github.io/contact.html>Contact</a></ul>
+                                    <li><a href=/contact.html>Contact</a></ul>
                     </li>
                     <!--comment out this block if you want to hide search-->
                     <li>
@@ -136,7 +136,7 @@
                 </script>
                 <div id=toc></div>
                 <p>My name is Chris I have basic HTML and CSS knowledge nothing to show off really I just design websites for a hobby.
-                    <div class=tags><b>Tags: </b><a href=https://0mniscient.github.io/docs.html class="btn btn-default cursorNorm navbar-btn" role=button>Home</a></div>
+                    <div class=tags><b>Tags: </b><a href=/docs.html class="btn btn-default cursorNorm navbar-btn" role=button>Home</a></div>
             </div>
             <hr class=shaded>
             <footer>
