--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                             <li class=active><a href=#>About</a></ul>
                         <li><a href=#>Installation</a>
                             <ul>
-                                <li><a href=/install_win.html>Installing on Windows</a>
+                                <li><a href=/BetterDiscord/install_win.html>Installing on Windows</a>
                                     <li><a href=/install_mac.html>Installing on Mac</a>
                                         <li><a href=/install_linux.html>Installing on Linux</a></ul>
                             <li><a href=#>How to use</a>
