--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
 <nav class="navbar navbar-fixed-top navbar-inverse">
     <div class="container topnavlinks">
         <div class=navbar-header>
-            <button class=navbar-toggle data-target=#bs-example-navbar-collapse-1 data-toggle=collapse type=button><span class=sr-only>Toggle navigation</span> <span class=icon-bar></span> <span class=icon-bar></span> <span class=icon-bar></span></button> <a href=/docs.html class="fa fa-home fa-lg navbar-brand"><span class=projectTitle> Omni Docs</span></a></div>
+            <button class=navbar-toggle data-target=#bs-example-navbar-collapse-1 data-toggle=collapse type=button><span class=sr-only>Toggle navigation</span> <span class=icon-bar></span> <span class=icon-bar></span> <span class=icon-bar></span></button> <a href=/BetterDiscord/docs.html class="fa fa-home fa-lg navbar-brand"><span class=projectTitle> Omni Docs</span></a></div>
         <div
             class="collapse navbar-collapse" id=bs-example-navbar-collapse-1>
             <ul class="nav navbar-nav navbar-right">
@@ -66,7 +66,7 @@
                         <li><a href=https://github.com/0mniscient/Discord-Themes target=_blank>Github Repo</a>
                             <li><a href=https://discordapp.com/invite/0Tmfo5ZbORCRqbAd target=_blank>Support Server</a>
                                 <li><a href=https://discordapp.com/ target=_blank>DiscordApp</a>
-                                    <li><a href=/contact.html>Contact</a></ul>
+                                    <li><a href=/BetterDiscord/contact.html>Contact</a></ul>
                     </li>
                     <!--comment out this block if you want to hide search-->
                     <li>
