--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <nav class="navbar navbar-fixed-top navbar-inverse">
     <div class="container topnavlinks">
         <div class=navbar-header>
-            <button class=navbar-toggle data-target=#bs-example-navbar-collapse-1 data-toggle=collapse type=button><span class=sr-only>Toggle navigation</span> <span class=icon-bar></span> <span class=icon-bar></span> <span class=icon-bar></span></button> <a href=/docs.html class="fa fa-home fa-lg navbar-brand"><span class=projectTitle> Omni Docs</span></a></div>
+            <button class=navbar-toggle data-target=#bs-example-navbar-collapse-1 data-toggle=collapse type=button><span class=sr-only>Toggle navigation</span> <span class=icon-bar></span> <span class=icon-bar></span> <span class=icon-bar></span></button> <a href=/BetterDiscord/docs.html class="fa fa-home fa-lg navbar-brand"><span class=projectTitle> Omni Docs</span></a></div>
         <div
             class="collapse navbar-collapse" id=bs-example-navbar-collapse-1>
             <ul class="nav navbar-nav navbar-right">
@@ -107,7 +107,7 @@
                             <li class=active><a href=#>About</a></ul>
                         <li><a href=#>Installation</a>
                             <ul>
-                                <li><a href=/BetterDiscord/BetterDiscord/install_win.html>Installing on Windows</a>
+                                <li><a href=/BetterDiscord/install_win.html>Installing on Windows</a>
                                     <li><a href=/BetterDiscord/install_mac.html>Installing on Mac</a>
                                         <li><a href=/BetterDiscord/install_linux.html>Installing on Linux</a></ul>
                             <li><a href=#>How to use</a>
