--- a/about.html
+++ b/about.html
@@ -136,7 +136,7 @@
                 </script>
                 <div id=toc></div>
                 <p>My name is Chris I have basic HTML and CSS knowledge nothing to show off really I just design websites for a hobby.
-                    <div class=tags><b>Tags: </b><a href=/docs.html class="btn btn-default cursorNorm navbar-btn" role=button>Home</a></div>
+                    <div class=tags><b>Tags: </b><a href=/BetterDiscord/ class="btn btn-default cursorNorm navbar-btn" role=button>Home</a></div>
             </div>
             <hr class=shaded>
             <footer>
