--- a/themes.html
+++ b/themes.html
@@ -159,81 +159,68 @@
                 </script>
 
                 <style>
-                    #barr-container {
-                        text-align: center;
-                        margin: 20px;
-                    }
-
-                    .bar-main-container {
-                        margin: 10px auto;
-                        width: 300px;
-                        height: 50px;
-                        -webkit-border-radius: 4px;
-                        -moz-border-radius: 4px;
-                        border-radius: 4px;
-                        font-family: sans-serif;
-                        font-weight: normal;
-                        font-size: 0.8em;
-                        color: #FFF;
-                    }
-
-                    .bar-wrap {
-                        padding: 8px;
-                    }
-
-                    .bar-percentage {
-                        float: left;
-                        background: rgba(0, 0, 0, 0.13);
-                        -webkit-border-radius: 4px;
-                        -moz-border-radius: 4px;
-                        border-radius: 4px;
-                        padding: 9px 0px;
-                        width: 18%;
-                        height: 32px;
-                    }
-
-                    .bar-container {
-                        float: right;
-                        -webkit-border-radius: 10px;
-                        -moz-border-radius: 10px;
-                        border-radius: 10px;
-                        height: 10px;
-                        background: rgba(0, 0, 0, 0.13);
-                        width: 78%;
-                        margin: 12px 0px;
-                        overflow: hidden;
-                    }
-
-                    .bar {
-                        float: left;
-                        background: #FFF;
-                        height: 100%;
-                        -webkit-border-radius: 10px 0px 0px 10px;
-                        -moz-border-radius: 10px 0px 0px 10px;
-                        border-radius: 10px 0px 0px 10px;
-                        -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
-                        filter: alpha(opacity=100);
-                        -moz-opacity: 1;
-                        -khtml-opacity: 1;
-                        opacity: 1;
-                    }
-                    /* COLORS */
-
-                    .emerald {
-                        background: #2db5a9;
+                    @media only screen and (min-width: 900px),
+                    not all {
+                        .col-md-9 img {
+                            max-height: 182px !important;
+                            height: auto !important;
+                        }
                     }
                 </style>
                 <div id=toc></div>
-                <div class="alert alert-warning" role=alert><i class="fa fa-warning"></i> <b>Important: </b>The Themes download page is in progress.</div>
-                <h2 id=Progress>Progress</h2>
-                <div id="barr-container">
-                    <div id="bar-1" class="bar-main-container emerald">
-                        <div class="bar-wrap">
-                            <div class="bar-percentage" data-percentage="2">2%</div>
-                            <div class="bar-container">
-                                <div class="bar" style="width: 2%;"></div>
-                            </div>
-                        </div>
+                <div class="alert alert-warning" role=alert><i class="fa fa-warning"></i> <b>Important: </b>Descriptions are scrollable!</div>
+                <h2 id=Progress>Themes</h2>
+                <div class="popular-list">
+                    <div class="theme-unit">
+                        <div class="media"><img src="images/Reborn.jpg" data-lightbox="themepreview"></div>
+                        <div class="desc">
+                            <b>Discord Reborn</b>
+                            <br>
+                            <b>Author:</b> Omniscient
+                            <br>
+                            <b>Description:</b> Beautiful theme all I have to say.
+                            <br>
+                            <b>Updated:</b> 2016-07-14 09:40:58
+                            <br>
+                            <a href=# onclick="window.open('BetterDiscord/install_theme.html');window.open('https://github.com/0mniscient/Discord-Themes/blob/master/Themes/Discord%20Reborn.theme.css');" class="btn btn-primary btn-download">Download</a>
+                            <span style="display: inline-block; line-height: normal; font-size: inherit; vertical-align: middle; position: relative; width: 1.1em; height: 1.1em; top: -0.1em;"><svg style="padding: 0px; margin: 0px; width: 100%; height: 100%;"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#emoji-1f3fb"></use></svg><emoji-description style="width: 0px; height: 0px; font-size: 0px; line-height: 0;">🏻</emoji-description></span></div>
+                    </div>
+                    <div class="theme-unit">
+                        <div class="media"><img src="https://github.com/cosmicsalad/Discord-Themes-and-Plugins/raw/master/dm-ss.jpg" data-lightbox="themepreview"></div>
+                        <div class="desc"><b>Dark Matter</b>
+                            <br>
+                            <b>Author:</b> Hammock
+                            <br>
+                            <b>Description:</b> A cold, dark & frosty theme.
+                            <br>
+                            <b>Updated:</b> 2016-07-14 09:40:58
+                            <br>
+                            <a href=# onclick="window.open('BetterDiscord/install_theme.html');window.open('https://github.com/cosmicsalad/Discord-Themes-and-Plugins/blob/master/themes/DarkMatter/DarkMatter.theme.css');" class="btn btn-primary btn-download">Download</a>
+                            <span style="display: inline-block; line-height: normal; font-size: inherit; vertical-align: middle; position: relative; width: 1.1em; height: 1.1em; top: -0.1em;"><svg style="padding: 0px; margin: 0px; width: 100%; height: 100%;"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#emoji-1f478-1f3fb"></use></svg><emoji-description style="width: 0px; height: 0px; font-size: 0px; line-height: 0;">👸🏻</emoji-description></span></div>
+                    </div>
+                    <div class="theme-unit">
+                        <div class="media"><img src="https://imgur.com/apUSFCc.png" data-lightbox="themepreview"></div>
+                        <div class="desc"><b>Sleeping Beauty</b>
+                              <br>
+                              <b>Author:</b> Maple
+                              <br>
+                              <b>Description:</b> A soft little theme for Disney fans!
+                              <br>
+                              <b>Updated:</b> 2016-07-14 09:40:58
+                              <br>
+                            <a href=# onclick="window.open('BetterDiscord/install_theme.html');window.open('https://github.com/mrmaple240/Sleeping-Beauty/blob/master/sleepingbeauty.theme.css');" class="btn btn-primary btn-download">Download</a></div>
+                    </div>
+                    <div class="theme-unit">
+                        <div class="media"><img src="https://imgur.com/TUZpkAh.png" data-lightbox="themepreview"></div>
+                        <div class="desc"><b>Material Theme</b>
+                            <br>
+                            <b>Author:</b> Beard Design
+                            <br>
+                            <b>Description:</b> Modern and Cleaned up Discords UI and custom smooth animations.
+                            <br>
+                            <b>Updated:</b> 2016-07-14 09:40:58
+                            <br>
+                          <a href=# onclick="window.open('BetterDiscord/install_theme.html');window.open('https://github.com/BeardDesign1/Material-design-theme');" class="btn btn-primary btn-download">Download</a></div>
                     </div>
                 </div>
             </div>
