--- a/themes.html
+++ b/themes.html
@@ -183,7 +183,7 @@
                             <b>Updated:</b> 2016-07-14 09:40:58
                             <br>
                             <a href=# onclick="window.open('BetterDiscord/install_theme.html');window.open('https://github.com/0mniscient/Discord-Themes/blob/master/Themes/Discord%20Reborn.theme.css');" class="btn btn-primary btn-download">Download</a>
-                            <span style="display: inline-block; line-height: normal; font-size: inherit; vertical-align: middle; position: relative; width: 1.1em; height: 1.1em; top: -0.1em;"><svg style="padding: 0px; margin: 0px; width: 100%; height: 100%;"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#emoji-1f3fb"></use></svg><emoji-description style="width: 0px; height: 0px; font-size: 0px; line-height: 0;">🏻</emoji-description></span></div>
+                        </div>
                     </div>
                     <div class="theme-unit">
                         <div class="media"><img src="https://github.com/cosmicsalad/Discord-Themes-and-Plugins/raw/master/dm-ss.jpg" data-lightbox="themepreview"></div>
@@ -196,18 +196,18 @@
                             <b>Updated:</b> 2016-07-14 09:40:58
                             <br>
                             <a href=# onclick="window.open('BetterDiscord/install_theme.html');window.open('https://github.com/cosmicsalad/Discord-Themes-and-Plugins/blob/master/themes/DarkMatter/DarkMatter.theme.css');" class="btn btn-primary btn-download">Download</a>
-                            <span style="display: inline-block; line-height: normal; font-size: inherit; vertical-align: middle; position: relative; width: 1.1em; height: 1.1em; top: -0.1em;"><svg style="padding: 0px; margin: 0px; width: 100%; height: 100%;"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#emoji-1f478-1f3fb"></use></svg><emoji-description style="width: 0px; height: 0px; font-size: 0px; line-height: 0;">👸🏻</emoji-description></span></div>
+                        </div>
                     </div>
                     <div class="theme-unit">
                         <div class="media"><img src="https://imgur.com/apUSFCc.png" data-lightbox="themepreview"></div>
                         <div class="desc"><b>Sleeping Beauty</b>
-                              <br>
-                              <b>Author:</b> Maple
-                              <br>
-                              <b>Description:</b> A soft little theme for Disney fans!
-                              <br>
-                              <b>Updated:</b> 2016-07-14 09:40:58
-                              <br>
+                            <br>
+                            <b>Author:</b> Maple
+                            <br>
+                            <b>Description:</b> A soft little theme for Disney fans!
+                            <br>
+                            <b>Updated:</b> 2016-07-14 09:40:58
+                            <br>
                             <a href=# onclick="window.open('BetterDiscord/install_theme.html');window.open('https://github.com/mrmaple240/Sleeping-Beauty/blob/master/sleepingbeauty.theme.css');" class="btn btn-primary btn-download">Download</a></div>
                     </div>
                     <div class="theme-unit">
@@ -220,7 +220,7 @@
                             <br>
                             <b>Updated:</b> 2016-07-14 09:40:58
                             <br>
-                          <a href=# onclick="window.open('BetterDiscord/install_theme.html');window.open('https://github.com/BeardDesign1/Material-design-theme');" class="btn btn-primary btn-download">Download</a></div>
+                            <a href=# onclick="window.open('BetterDiscord/install_theme.html');window.open('https://github.com/BeardDesign1/Material-design-theme');" class="btn btn-primary btn-download">Download</a></div>
                     </div>
                 </div>
             </div>
