--- a/themes.html
+++ b/themes.html
@@ -118,7 +118,7 @@
                                         <li><a href=/BetterDiscord/faq.html>FAQ</a></ul>
                                     <li><a href=#>Guides</a>
                                         <ul>
-                                            <li><a href=/BetterDiscord/install_theme.html>Installing Themes</a>
+                                            <li><a href=/BetterDiscord/BetterDiscord/install_theme.html>Installing Themes</a>
                                                 <li><a href=/BetterDiscord/install_plugin.html>Installing Plugins</a>
                                                     <li><a href=/BetterDiscord/making_theme.html>Making A Theme</a>
                                                         <li><a href=/BetterDiscord/making_plugin.html>Making A Plugin</a></ul>
@@ -182,7 +182,7 @@
                             <br>
                             <b>Updated:</b> 2016-07-14 09:40:58
                             <br>
-                            <a href=/install_theme.html onclick="window.open('https://github.com/0mniscient/Discord-Themes/blob/master/Themes/Discord%20Reborn.theme.css');" class="btn btn-primary btn-download">Download</a>
+                            <a href=/BetterDiscord/install_theme.html onclick="window.open('https://github.com/0mniscient/Discord-Themes/blob/master/Themes/Discord%20Reborn.theme.css');" class="btn btn-primary btn-download">Download</a>
                         </div>
                     </div>
                     <div class="theme-unit">
@@ -195,7 +195,7 @@
                             <br>
                             <b>Updated:</b> 2016-07-14 09:40:58
                             <br>
-                            <a href=/install_theme.html onclick="window.open('https://github.com/cosmicsalad/Discord-Themes-and-Plugins/blob/master/themes/DarkMatter/DarkMatter.theme.css');" class="btn btn-primary btn-download">Download</a>
+                            <a href=/BetterDiscord/install_theme.html onclick="window.open('https://github.com/cosmicsalad/Discord-Themes-and-Plugins/blob/master/themes/DarkMatter/DarkMatter.theme.css');" class="btn btn-primary btn-download">Download</a>
                         </div>
                     </div>
                     <div class="theme-unit">
@@ -208,7 +208,7 @@
                             <br>
                             <b>Updated:</b> 2016-07-14 09:40:58
                             <br>
-                            <a href=/install_theme.html onclick="window.open('https://github.com/mrmaple240/Sleeping-Beauty/blob/master/sleepingbeauty.theme.css');" class="btn btn-primary btn-download">Download</a></div>
+                            <a href=/BetterDiscord/install_theme.html onclick="window.open('https://github.com/mrmaple240/Sleeping-Beauty/blob/master/sleepingbeauty.theme.css');" class="btn btn-primary btn-download">Download</a></div>
                     </div>
                     <div class="theme-unit">
                         <div class="media"><img src="https://imgur.com/TUZpkAh.png" data-lightbox="themepreview"></div>
@@ -220,7 +220,7 @@
                             <br>
                             <b>Updated:</b> 2016-07-14 09:40:58
                             <br>
-                            <a href=/install_theme.html onclick="window.open('https://github.com/BeardDesign1/Material-design-theme');" class="btn btn-primary btn-download">Download</a></div>
+                            <a href=/BetterDiscord/install_theme.html onclick="window.open('https://github.com/BeardDesign1/Material-design-theme');" class="btn btn-primary btn-download">Download</a></div>
                     </div>
                 </div>
             </div>
