--- a/faq.html
+++ b/faq.html
@@ -4,7 +4,7 @@
 <meta content="width=device-width,initial-scale=1" name=viewport>
 <meta content="Answers to the questions you have for BetterDiscord and solutions and How-To's." name=description>
 <meta content="Omni Omniscient Jiiks Hammock Maple Bluescream BetterDiscord Discord Themes Plugins Theme Plugin Installation How-To" name="keywords">
-<title>Omni documentation | BetterDiscord Documentation and Tutorials</title>
+<title>Frequently Asked Questions</title>
 <link href=doc_files/syntax.css rel=stylesheet>
 <link href=doc_files/font-awesome.min.css rel=stylesheet>
 <!--<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">-->
