--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta content="width=device-width,initial-scale=1" name=viewport>
 <meta content="Documentation for BetterDiscord, a 3rd party software for Discordapp." name="description">
 <meta content="Omni Omniscient Jiiks Hammock Maple Bluescream BetterDiscord Discord Themes Plugins Theme Plugin Installation How-To" name="keywords">
-<title>Omni documentation | BetterDiscord Documentation and Tutorials</title>
+<title>BetterDiscord Documentation and Tutorials</title>
 <link href=doc_files/syntax.css rel=stylesheet>
 <link href=doc_files/font-awesome.min.css rel=stylesheet>
 <!--<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">-->
