--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <meta charset=utf-8>
 <meta content="IE=edge" http-equiv=X-UA-Compatible>
 <meta content="width=device-width,initial-scale=1" name=viewport>
-<meta content="Documentation for BetterDiscord, a 3rd party software for Discordapp." name="description">
+<meta content="Documentation for BetterDiscord, a 3rd party software for Discordapp to optimize Discord with Plugins and Themes and Twitch Emotes with it's built-in JavaScript loader." name="description">
 <meta content="Omni Omniscient Jiiks Hammock Maple Bluescream BetterDiscord Discord Themes Plugins Theme Plugin Installation How-To" name="keywords">
 <title>BetterDiscord Documentation and Tutorials</title>
 <link href=doc_files/syntax.css rel=stylesheet>
