--- a/faq.html
+++ b/faq.html
@@ -2,7 +2,7 @@
 <meta charset=utf-8>
 <meta content="IE=edge" http-equiv=X-UA-Compatible>
 <meta content="width=device-width,initial-scale=1" name=viewport>
-<meta content="Answers to the questions you have for BetterDiscord and solutions and How-To's." name=description>
+<meta content="Answers to the questions you have for BetterDiscord and solutions to the problems you have. We will help to make your Discord Better again!" name=description>
 <meta content="Omni Omniscient Jiiks Hammock Maple Bluescream BetterDiscord Discord Themes Plugins Theme Plugin Installation How-To" name="keywords">
 <title>Frequently Asked Questions about BetterDiscord</title>
 <link href=doc_files/syntax.css rel=stylesheet>
