--- a/index.html
+++ b/index.html
@@ -161,6 +161,8 @@
                 <p>BetterDiscord is in continuous development and new features get added all the time to better Discord to our needs. Stay tuned by <a href=https://discordapp.com/invite/0Tmfo5ZbORCRqbAd>joining the official server</a>!
                     <div class="alert alert-warning"
                         role=alert><i class="fa fa-warning"></i> <b>Important: </b>These docs are undergoing contruction!</div>
+                    <h2 id=installation>What is BetterDiscord?</h2>
+                    <p>BetterDiscord is an enhancement to <a href=https://discordapp.com/>Discord</a>. With custom Plugins and Themes you can have a Discordapp that is on steroids!
                     <h2 id=installation>Installation</h2>
                     <h3 id=windows>Windows</h3>
                     <ul>
@@ -173,10 +175,6 @@
                     <h3 id=mac>Linux</h3>
                     <ul>
                         <li><a href=/BetterDiscord/install_linux.html>How to install on Linux</a></ul>
-                    <h2 id=how-to-use>How to use</h2>
-                    <ul>
-                          <li>
-                              <p><a href=/plugin_api.html>PluginAPI</a></ul>
                     <h2 id=common-issues>Common issues</h2>
                     <p>For installation and general issues:
                         <ul>
