--- a/index.html
+++ b/index.html
@@ -158,11 +158,10 @@
                     })
                 </script>
                 <div id=toc></div>
-                <p>BetterDiscord is in continuous development and new features get added all the time to better Discord to our needs. Stay tuned by <a href=https://discordapp.com/invite/0Tmfo5ZbORCRqbAd>joining the official server</a>!
                     <div class="alert alert-warning"
                         role=alert><i class="fa fa-warning"></i> <b>Important: </b>These docs are undergoing contruction!</div>
                     <h2 id=installation>What is BetterDiscord?</h2>
-                    <p>BetterDiscord is an enhancement to <a href=https://discordapp.com/>Discord</a>. With custom Plugins and Themes you can have a Discordapp that is on steroids!
+                    <p>BetterDiscord is in continuous development and new features get added daily! it is a HUGE enhancement to <a href=https://discordapp.com/>Discord</a>. With custom Plugins and Themes you can have a Discordapp that is on steroids! Stay tuned on updates by <a href=https://discordapp.com/invite/0Tmfo5ZbORCRqbAd>joining the official server</a>!
                     <h2 id=installation>Installation</h2>
                     <h3 id=windows>Windows</h3>
                     <ul>
