--- a/faq.html
+++ b/faq.html
@@ -201,7 +201,7 @@ Mac: ~/Library/Preferences/BetterDiscord/themes</code></pre></div>
                                             <li>
                                                 <p>Step 2: Make sure the themes file extension is <code>.theme.css</code>
                                                     <li>
-                                                        <p>Step 3: Make sure the themes 1st line of CSS contains the META tag
+                                                        <p>Step 3: Make sure the themes 1st line of CSS contains the <a href=#meta_tag>META</a> tag
                                                             <li>
                                                                 <p>Step 4: Head back to Discord and CTRL+R on your keyboard
                                                                     <li>
@@ -216,7 +216,7 @@ Mac: ~/Library/Preferences/BetterDiscord/plugins</code></pre></div>
                                                 <li>
                                                     <p>Step 2: Make sure the plugins file extension is <code>.plugin.js</code>
                                                         <li>
-                                                            <p>Step 3: Make sure the themes 1st line of Javascript contains the META tag
+                                                            <p>Step 3: Make sure the themes 1st line of Javascript contains the <a href=#meta_tag>META</a> tag
                                                                 <li>
                                                                     <p>Step 4: Head back to Discord and CTRL+R on your keyboard
                                                                         <li>
@@ -255,13 +255,14 @@ Mac: ~/Library/Preferences/BetterDiscord/plugins</code></pre></div>
                                                                             <p>PasteBin/Ghostbin - Not recommended site to host themes/plugins</ul>
                                                     <h2 id=meta_tag>What's a Meta Tag?</h2>
                                                     <p>A Meta tag is the first line of CSS/Javascript that is required for every Theme/Plugin to have so BetterDiscord can load the file.
-                                                      <ul>
-                                                          <li>
-                                                              <p>Example of a Theme's Meta Tag
-                                                                <div class=highlighter-rouge><pre class=highlight><code>//META{"name":"First_Theme","description":"My First Theme.","author":"Omniscient","version":"1.00"}*//</code></pre></div>
-                                                                  <li>
-                                                                      <p>Example of a Plugin's Meta Tag
-                                                                        <div class=highlighter-rouge><pre class=highlight><code>//META{"name":"First_Plugin"}*//</code></pre></div></ul>
+                                                        <ul>
+                                                            <li>
+                                                                <p>Example of a Theme's Meta Tag
+                                                                    <div class=highlighter-rouge><pre class=highlight><code>//META{"name":"First_Theme","description":"My First Theme.","author":"Omniscient","version":"1.00"}*//</code></pre></div>
+                                                                    <li>
+                                                                        <p>Example of a Plugin's Meta Tag
+                                                                            <div class=highlighter-rouge><pre class=highlight><code>//META{"name":"First_Plugin"}*//</code></pre></div>
+                                                        </ul>
             </div>
             <hr class=shaded>
             <footer>
