--- a/faq.html
+++ b/faq.html
@@ -201,7 +201,7 @@ Mac: ~/Library/Preferences/BetterDiscord/themes</code></pre></div>
                                             <li>
                                                 <p>Step 2: Make sure the themes file extension is <code>.theme.css</code>
                                                     <li>
-                                                        <p>Step 3: Make sure the themes 1st line of CSS contains the <a href=#meta_tag>META</a> tag
+                                                        <p>Step 3: Make sure the themes <b>1st</b> line of CSS contains the <a href=#meta_tag>META</a> tag
                                                             <li>
                                                                 <p>Step 4: Head back to Discord and CTRL+R on your keyboard
                                                                     <li>
@@ -216,7 +216,7 @@ Mac: ~/Library/Preferences/BetterDiscord/plugins</code></pre></div>
                                                 <li>
                                                     <p>Step 2: Make sure the plugins file extension is <code>.plugin.js</code>
                                                         <li>
-                                                            <p>Step 3: Make sure the themes 1st line of Javascript contains the <a href=#meta_tag>META</a> tag
+                                                            <p>Step 3: Make sure the themes <b>1st</b> line of Javascript contains the <a href=#meta_tag>META</a> tag
                                                                 <li>
                                                                     <p>Step 4: Head back to Discord and CTRL+R on your keyboard
                                                                         <li>
