--- a/install_plugin.html
+++ b/install_plugin.html
@@ -163,7 +163,7 @@
                 <p>Follow These instructions to install a plugin.
                     <ul>
                         <li>
-                            <p>Go to the BetterDiscord server and go to "plugin-repo" and find a plugin you want and click the link (Skip to step 4 if you are downloading elsewhere)
+                            <p>Go to the BetterDiscord server and go to "plugin-repo" and find a plugin you want and click the Github link (Skip to step 4 if you are downloading elsewhere)
                                 <li>
                                     <p>Click the <b>raw</b> button on the right.
                                         <br><img alt="click raw button" src=https://imgur.com/fh7ICeA.png>
