--- a/themes.html
+++ b/themes.html
@@ -114,7 +114,9 @@
                                     <li><a href=/BetterDiscord/plugin_api.html>PluginAPI</a></ul>
                                 <li><a href=#>Troubleshooting</a>
                                     <ul>
-                                        <li><a href=/BetterDiscord/faq.html>FAQ</a></ul>
+                                      <li><a href=/BetterDiscord/theme_troubleshoot.html>Themes</a>
+                                          <li><a href=/BetterDiscord/plugin_troubleshoot.html>Plugins</a>
+                                              <li><a href=/BetterDiscord/betterdiscord_troubleshoot.html>BetterDiscord</a></ul>
                                     <li><a href=#>Guides</a>
                                         <ul>
                                             <li><a href=/BetterDiscord/BetterDiscord/install_theme.html>Installing Themes</a>
