--- a/plugin_api.html
+++ b/plugin_api.html
@@ -115,7 +115,9 @@
                                         <li class=active><a href=#>PluginAPI</a></ul>
                                 <li><a href=#>Troubleshooting</a>
                                     <ul>
-                                        <li><a href=/BetterDiscord/faq.html>FAQ</a></ul>
+                                      <li><a href=/BetterDiscord/theme_troubleshoot.html>Themes</a>
+                                          <li><a href=/BetterDiscord/plugin_troubleshoot.html>Plugins</a>
+                                              <li><a href=/BetterDiscord/betterdiscord_troubleshoot.html>BetterDiscord</a></ul>
                                     <li><a href=#>Guides</a>
                                         <ul>
                                             <li><a href=/BetterDiscord/install_theme.html>Installing Themes</a>
