--- a/betterdiscord_troubleshoot.html
+++ b/betterdiscord_troubleshoot.html
@@ -160,6 +160,8 @@
                 <div class=tocexpanded id=toc></div>
                 <h2 id=FAQ>FAQ</h2>
                 <p>Answers to frequently asked questions.
+                  <h2 id=No_Install>BetterDiscord not installing!</h2>
+                  <p>BetterDiscord is in continuous development with bug fixes and improvement and at the moment it seems to be an uncommon glitch all we can say is keep trying to install! :(
                     <h2 id=No_Settings>Can't Access Settings</h2>
                     <p>How to access Discords settings manually because of a theme/plugin problem.
                         <ul>
